# bindb-rs

./: .gitignore  Cargo.toml  README.md
binbuf/: Cargo.toml
binbuf/src/: bytes_ptr.rs  dynamic.rs  entry.rs  fixed.rs  impls.rs  lib.rs  tests.rs  utils.rs
binbuf/src/entry/: id.rs  impls.rs
binbuf/src/fixed/: lens.rs
binbuf/src/impls/: arb_num.rs  dynamic.rs  (+1 more)
binbuf_macros/: Cargo.toml
binbuf_macros/src/: lib.rs
bindb/: Cargo.toml  newer_main
bindb/src/: lib.rs  storage.rs  tests.rs  utils.rs
bindb/src/storage/: binary_tree.rs  dynamic.rs  fixed.rs  indexed_dynamic.rs  single.rs
bindb/src/storage/binary_tree/: search.rs
bindb/src/storage/dynamic/: header.rs
bindb/src/storage/fixed/: header.rs
lib/: Cargo.toml  older_main
lib/src/: buf.rs  bytes_ptr.rs  codable.rs  codable_old.rs  collection.rs  entry.rs  lens.rs  lensable.rs  lib.rs  ownership.rs  ref_variant.rs  storage.rs  tests.rs  type_fn.rs  utils.rs
lib/src/buf/: bytes.rs
lib/src/codable/: basic.rs  bytes.rs
lib/src/collection/: header.rs
lib/src/entry/: bytes.rs  id.rs  impls.rs  ptr.rs
lib/src/entry/bytes/: variant.rs  wrap.rs
lib/src/entry/impls/: primitive.rs
lib/src/lens/: producer.rs
lib/src/storage/: binary_tree.rs  dynamic.rs  fixed.rs  indexed_dynamic.rs  single.rs
lib/src/storage/dynamic/: entry_id.rs  header.rs
macros/: Cargo.toml
macros/src/: codable.rs  entry.rs  lib.rs
src/: codable.rs  collection.rs  entry.rs  lens.rs  main.rs  private.rs
src/codable/: basic.rs
src/entry/: id.rs
testing/: Cargo.toml
testing/src/: lib.rs  main.rs  ownership.rs
(+40 files in other folders)
