[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# [profile.test]
# lto = true
# codegen-units = 1
# opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extend = "1.2.0"
memmap2 = "0.9.4"
to_phantom = "0.1.0"
binbuf = { path = "../binbuf" }
rand = "0.8.5"
