[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# [profile.test]
# lto = true
# codegen-units = 1
# opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extend = "1.2.0"
fmmap = "0.3.3"
macros = { version = "0.1.0", path = "../macros" }
memmap = "0.7.0"
mmap = "0.1.1"
